<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".strilen"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:showIn="@layout/activity_strilen">

    <TextView
        android:id="@+id/heightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="What's your height?"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/heightFeet"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginTop="70dp"
        android:hint="Feet"
        android:inputType="number"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="77dp" />

    <EditText
        android:id="@+id/heightInch"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:hint="Inch"
        android:inputType="number"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/showStrideLen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text=""
        android:textSize="24sp" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="UPDATE"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="274dp" />
    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="Continue"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="274dp" />
</android.support.v7.widget.LinearLayoutCompat>