...
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="SHOW PREVIOUS WALK"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="add 500 steps"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
...
